Add the flexbox style to the elements. Add font-awesome to the app.

--- a/app/index.html
+++ b/app/index.html
@@ -9,8 +9,10 @@
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <!-- Place favicon.ico in the root directory -->
     <link rel="shortcut icon" type="image/png" href="favicon.ico"/>
+    
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
+    <link rel="stylesheet" href="/bower_components/font-awesome/css/font-awesome.css" />
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -35,9 +37,9 @@
         <h1>Marek Dano</h1>
         <h4>Title</h4>
         <ul class="social">
-          <li>github</li>
-          <li>twitter</li>
-          <li>linkedin</li>
+          <li><i class="fa fa-github-square"></i></li>
+          <li><i class="fa fa-twitter-square"></i></li>
+          <li><i class="fa fa-linkedin-square"></i></li>
         </ul>
       </div>
     </div>
