--- a/app/index.html
+++ b/app/index.html
@@ -32,14 +32,15 @@
     <div class="wrapper">
       <div class="about">
         <div class="picture">
-          <img src="#" alt="profile image">
+          <img src="/images/profile-image.jpg" alt="profile image">
         </div>
         <h1>Marek Dano</h1>
-        <h4>Title</h4>
+        <h4>Web developer at the night & Tester at the day at Cicero Networks</h4>
         <ul class="social">
-          <li><i class="fa fa-github-square"></i></li>
-          <li><i class="fa fa-twitter-square"></i></li>
-          <li><i class="fa fa-linkedin-square"></i></li>
+          <li><i class="fa fa-github"></i></li>
+          <li><i class="fa fa-twitter"></i></li>
+          <li><i class="fa fa-linkedin"></i></li>
+          <li><i class="fa fa-codepen"></i></li>
         </ul>
       </div>
     </div>
