Add typedjs plugin and interaction with the text to the website.

--- a/app/index.html
+++ b/app/index.html
@@ -35,7 +35,16 @@
           <img src="/images/profile-image.jpg" alt="profile image">
         </div>
         <h1>Marek Dano</h1>
-        <h4>Web developer at the night & Tester at the day at Cicero Networks</h4>
+        <div class="content">
+          <h4 class="title">Web developer at the night. Tester at the day.</h4>
+  
+          <div class="typed-strings">
+            <p>Web developer at the night.</p>
+            <p>Tester at the day.</p>
+          </div>
+          <span class="typed-sentences"></span>
+        </div>
+
         <ul class="social">
           <li><i class="fa fa-github"></i></li>
           <li><i class="fa fa-twitter"></i></li>
@@ -58,6 +67,7 @@
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
     <script src="/bower_components/jquery/dist/jquery.js"></script>
+    <script src="/bower_components/typedjs-bower/dist/typed.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     
