Styled the layout of the page, the typed text and the profile image.

--- a/app/index.html
+++ b/app/index.html
@@ -32,11 +32,11 @@
     <div class="wrapper">
       <div class="about">
         <div class="picture">
-          <img src="/images/profile-image.jpg" alt="profile image">
+          <img class="img-circle img-profile" src="/images/profile-image.jpg" alt="profile image">
         </div>
         <h1>Marek Dano</h1>
         <div class="content">
-          <h4 class="title">Web developer at the night. Tester at the day.</h4>
+          <p class="title">Web developer / Tester </p>
   
           <div class="typed-strings">
             <p>Web developer at the night.</p>
