--- a/app/index.html
+++ b/app/index.html
@@ -34,7 +34,7 @@
         <div class="picture">
           <img class="img-circle img-profile" src="/images/profile-image.jpg" alt="profile image">
         </div>
-        <h1>Marek Dano</h1>
+        <h3>Marek Dano</h3>
         <div class="content">
           <p class="title">Web developer / Tester </p>
   
@@ -46,10 +46,10 @@
         </div>
 
         <ul class="social">
-          <li><i class="fa fa-github"></i></li>
-          <li><i class="fa fa-twitter"></i></li>
-          <li><i class="fa fa-linkedin"></i></li>
-          <li><i class="fa fa-codepen"></i></li>
+          <li><a href="https://www.github.com/marekdano" target="_blank"><i class="fa fa-github"></i></a></li>
+          <li><a href="https://www.twitter.com/marekdano" target="_blank"><i class="fa fa-twitter"></i></a></li>
+          <li><a href="https://www.linkedin.com/in/marekdano" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+          <li><a href="http://codepen.io/marekdano" target="_blank"><i class="fa fa-codepen"></i></a></li>
         </ul>
       </div>
     </div>
