--- a/app/index.html
+++ b/app/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>portfolio</title>
 
-    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <!-- <link rel="apple-touch-icon" href="apple-touch-icon.png"> -->
     <!-- Place favicon.ico in the root directory -->
-    <link rel="shortcut icon" type="image/png" href="favicon.ico"/>
+    <!-- <link rel="shortcut icon" type="image/png" href="favicon.ico"/> -->
     
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
@@ -32,7 +32,7 @@
     <div class="wrapper">
       <div class="about">
         <div class="picture">
-          <img class="img-circle img-profile" src="/images/profile-image.jpg" alt="profile image">
+          <img class="img-circle img-profile" src="images/profile-image.jpg" alt="profile image">
         </div>
         <h3>Marek Dano</h3>
         <div class="content">
