Fix dependencies and the position of the whole layout.

--- a/app/index.html
+++ b/app/index.html
@@ -37,12 +37,8 @@
         <h3>Marek Dano</h3>
         <div class="content">
           <p class="title">Web developer / Tester </p>
-  
-          <div class="typed-strings">
-            <p>Web developer at the night.</p>
-            <p>Tester at the day.</p>
-          </div>
-          <span class="typed-sentences"></span>
+
+          <span id="typed-sentences"></span>
         </div>
 
         <ul class="social">
@@ -66,8 +62,8 @@
 
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
-    <script src="/bower_components/jquery/dist/jquery.js"></script>
-    <script src="/bower_components/typedjs-bower/dist/typed.min.js"></script>
+    <script src="/bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="/bower_components/typed.js/dist/typed.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     
