Add portfolio sections.

--- a/app/index.html
+++ b/app/index.html
@@ -29,8 +29,8 @@
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
     
-    <div class="wrapper">
-      <div class="about">
+    <div id="wrapper">
+      <section id="intro">
         <div class="picture">
           <img class="img-circle img-profile" src="images/profile-image.jpg" alt="profile image">
         </div>
@@ -47,8 +47,41 @@
           <li><a href="https://www.linkedin.com/in/marekdano" target="_blank"><i class="fa fa-linkedin"></i></a></li>
           <li><a href="http://codepen.io/marekdano" target="_blank"><i class="fa fa-codepen"></i></a></li>
         </ul>
-      </div>
-    </div>
+      </section><!-- /#intro -->
+      <section id="portfolio">
+        <div class="inner">
+          <article class="feature left">
+            <div>
+              <img src="images/profile-image.jpg" alt="">
+            </div>
+            <div class="content">
+              <h2>Carosabike</h2>
+              <p>Bal bla bla and one more bla bla</p>
+              <ul class="actions">
+                <li>
+                  <a href="#" class="btn btn-default">More</a>
+                </li>
+              </ul>
+            </div>
+          </article>
+
+          <article class="feature right">
+            <div>
+              <img src="images/profile-image.jpg" alt="">
+            </div>
+            <div class="content">
+              <h2>Carosabike</h2>
+              <p>Bal bla bla and one more bla bla</p>
+              <ul class="actions">
+                <li>
+                  <a href="#" class="btn btn-default">More</a>
+                </li>
+              </ul>
+            </div>
+          </article>
+        </div>
+      </section>
+    </div><!-- /#wrapper -->
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
