Add the link to get to potfolio. Start to style the portfolio.

--- a/app/index.html
+++ b/app/index.html
@@ -48,14 +48,19 @@
           <li><a href="http://codepen.io/marekdano" target="_blank"><i class="fa fa-codepen"></i></a></li>
         </ul>
       </section><!-- /#intro -->
+      <section id="arrow-link">
+        <h5>Portfolio</h5>
+        <a href="#portfolio"><i class="fa fa-angle-down"></i></a>
+      </section>
+      
       <section id="portfolio">
         <div class="inner">
           <article class="feature left">
             <div>
-              <img src="images/profile-image.jpg" alt="">
+              <img class="img-responsive" src="images/profile-image.jpg" alt="">
             </div>
             <div class="content">
-              <h2>Carosabike</h2>
+              <h2>Carosa</h2>
               <p>Bal bla bla and one more bla bla</p>
               <ul class="actions">
                 <li>
@@ -67,7 +72,7 @@
 
           <article class="feature right">
             <div>
-              <img src="images/profile-image.jpg" alt="">
+              <img class="img-responsive" src="images/profile-image.jpg" alt="">
             </div>
             <div class="content">
               <h2>Carosabike</h2>
@@ -79,8 +84,8 @@
               </ul>
             </div>
           </article>
-        </div>
-      </section>
+        </div><!-- /.outer -->
+      </section><!-- /#portfolio -->
     </div><!-- /#wrapper -->
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
