Add tic-tac-toe screenshot and better styled the portfolio view.

--- a/app/index.html
+++ b/app/index.html
@@ -56,33 +56,35 @@
       <section id="portfolio">
         <div class="inner">
           <article class="feature left">
-            <div>
-              <img class="img-responsive" src="images/profile-image.jpg" alt="">
+          <div class="row">
+            <div class="image-wrapper col-md-6">
+              <img class="img-responsive" src="images/tic_tac_toe_screenshot.jpg" alt="">
             </div>
-            <div class="content">
+            <div class="content col-md-6">
               <h2>Carosa</h2>
               <p>Bal bla bla and one more bla bla</p>
-              <ul class="actions">
-                <li>
-                  <a href="#" class="btn btn-default">More</a>
-                </li>
-              </ul>
+              <div class="actions">
+                <a href="#" class="btn btn-default">Website</a>
+                <a href="#" class="btn btn-default">Code</a>
+              </div>
             </div>
+          </div>
           </article>
 
           <article class="feature right">
-            <div>
+           <div class="row">
+            <div class="image-wrapper col-md-6 pull-right-img">
               <img class="img-responsive" src="images/profile-image.jpg" alt="">
             </div>
-            <div class="content">
+            <div class="content col-md-6">
               <h2>Carosabike</h2>
               <p>Bal bla bla and one more bla bla</p>
-              <ul class="actions">
-                <li>
-                  <a href="#" class="btn btn-default">More</a>
-                </li>
-              </ul>
+              <div class="actions">
+                <a href="#" class="btn btn-default">Website</a>
+                <a href="#" class="btn btn-default">Code</a>
+              </div>
             </div>
+           </div>
           </article>
         </div><!-- /.outer -->
       </section><!-- /#portfolio -->
