Add more screenshots to the app. Style the portfolio section.

--- a/app/index.html
+++ b/app/index.html
@@ -35,9 +35,8 @@
           <img class="img-circle img-profile" src="images/profile-image.jpg" alt="profile image">
         </div>
         <h3>Marek Dano</h3>
-        <div class="content">
-          <p class="title">Web developer / Tester </p>
-
+        <div class="intro-content">
+          <h4 class="title">Web developer / Tester </h4>
           <span id="typed-sentences"></span>
         </div>
 
@@ -48,6 +47,7 @@
           <li><a href="http://codepen.io/marekdano" target="_blank"><i class="fa fa-codepen"></i></a></li>
         </ul>
       </section><!-- /#intro -->
+
       <section id="arrow-link">
         <h5>Portfolio</h5>
         <a href="#portfolio"><i class="fa fa-angle-down"></i></a>
@@ -55,29 +55,30 @@
       
       <section id="portfolio">
         <div class="inner">
-          <article class="feature left">
-          <div class="row">
-            <div class="image-wrapper col-md-6">
-              <img class="img-responsive" src="images/tic_tac_toe_screenshot.jpg" alt="">
+
+          <article class="feature right">
+           <div class="row">
+            <div class="image-wrapper col-md-6 pull-right-img">
+              <img class="img-responsive" src="images/carosabikes_screenshot.png" alt="">
             </div>
-            <div class="content col-md-6">
-              <h2>Carosa</h2>
-              <p>Bal bla bla and one more bla bla</p>
+            <div class="portfolio-content col-md-6">
+              <h2>Carosabikes</h2>
+              <p>Bal bla bla and one more bla bla Bal bla bla and one more bla bla Bal bla bla and one more bla bla Bal bla bla and one more bla bla Bal bla bla and one more bla bla</p>
               <div class="actions">
                 <a href="#" class="btn btn-default">Website</a>
                 <a href="#" class="btn btn-default">Code</a>
               </div>
             </div>
-          </div>
+           </div>
           </article>
 
-          <article class="feature right">
+          <article class="feature left">
            <div class="row">
-            <div class="image-wrapper col-md-6 pull-right-img">
-              <img class="img-responsive" src="images/profile-image.jpg" alt="">
+            <div class="image-wrapper col-md-6">
+              <img class="img-responsive" src="images/railsblog_screenshot.png" alt="">
             </div>
-            <div class="content col-md-6">
-              <h2>Carosabike</h2>
+            <div class="portfolio-content col-md-6">
+              <h2>RailsBlog</h2>
               <p>Bal bla bla and one more bla bla</p>
               <div class="actions">
                 <a href="#" class="btn btn-default">Website</a>
@@ -86,7 +87,24 @@
             </div>
            </div>
           </article>
-        </div><!-- /.outer -->
+
+          <article class="feature left">
+           <div class="row">
+            <div class="image-wrapper col-md-6">
+              <img class="img-responsive" src="images/tic_tac_toe_screenshot.jpg" alt="">
+            </div>
+            <div class="portfolio-content col-md-6">
+              <h2>Tic Tac Toe</h2>
+              <p>Bal bla bla and one more bla bla</p>
+              <div class="actions">
+                <a href="#" class="btn btn-default">Website</a>
+                <a href="#" class="btn btn-default">Code</a>
+              </div>
+            </div>
+           </div>
+          </article>
+
+        </div><!-- /.inner -->
       </section><!-- /#portfolio -->
     </div><!-- /#wrapper -->
 
