Add screenshots of the projects. Style the page with hover animation.

--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,7 @@
     <!-- bower:css -->
     <link rel="stylesheet" href="/bower_components/font-awesome/css/font-awesome.css" />
     <link rel="stylesheet" type="text/css" href="/bower_components/devicon/devicon.css">
+    <link rel="stylesheet" type="text/css" href="/bower_components/hover/css/hover-min.css">
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -50,7 +51,7 @@
         </ul>
       </section><!-- /#intro -->
 
-      <section id="arrow-link">
+      <section id="arrow-link" class="hvr-wobble-vertical">
         <h5>Portfolio</h5>
         <a href="#portfolio"><i class="fa fa-angle-down"></i></a>
       </section>
@@ -135,8 +136,8 @@
                 <i class="devicon devicon-heroku-original-wordmark colored"></i>
               </div>
               <div class="actions">
-                <a href="#" class="btn btn-default">Website</a>
-                <a href="#" class="btn btn-default">Code</a>
+                <a href="http://railsblog.marekdano.com" class="btn btn-default" target="_blank">Website</a>
+                <a href="http://github.com/marekdano/rails-blog" class="btn btn-default" target="_blank">Code</a>
               </div>
             </div>
            </div>
@@ -150,7 +151,7 @@
                   <i class="browser-icons"></i>
                 </div>
                 <div class="browser-viewport">
-                  <img class="img-responsive" src="images/carosabikes_screenshot.png" alt="">
+                  <img class="img-responsive" src="images/fullbasket_screenshot.png" alt="">
                 </div>
               </div>              
             </div>
@@ -164,6 +165,7 @@
                 <i class="devicon devicon-rails-plain-wordmark colored"></i>
                 <i class="devicon devicon-bootstrap-plain-wordmark colored"></i>
                 <i class="devicon devicon-sass-original colored"></i>
+                <i class="devicon-react-original-wordmark colored"></i>
               </div>
               <div class="actions">
                 <a href="#" class="btn btn-default">Website</a>
@@ -181,7 +183,7 @@
                   <i class="browser-icons"></i>
                 </div>
                 <div class="browser-viewport">
-                  <img class="img-responsive" src="images/tic_tac_toe_screenshot.jpg" alt="">
+                  <img class="img-responsive" src="images/cicero_innovate_screenshot.png" alt="">
                 </div>
               </div>
             </div>
@@ -190,7 +192,15 @@
               <p>CiceroInnovate is a website for a consulting company to showcase their company profile.</p>
 
               <p>The website is a basic static web page written in:</p>
-
+              
+              <div class="dev-icons">
+                <i class="devicon devicon-bootstrap-plain-wordmark colored"></i>
+                <i class="devicon devicon-sass-original colored"></i>
+              
+                <svg class="devicon" viewBox="0 0 128 128">
+                  <path fill="#1572B6" d="M18.814 114.123l-10.054-112.771h110.48l-10.064 112.754-45.243 12.543-45.119-12.526z"></path><path fill="#33A9DC" d="M64.001 117.062l36.559-10.136 8.601-96.354h-45.16v106.49z"></path><path fill="#fff" d="M64.001 51.429h18.302l1.264-14.163h-19.566v-13.831h34.681999999999995l-.332 3.711-3.4 38.114h-30.95v-13.831z"></path><path fill="#EBEBEB" d="M64.083 87.349l-.061.018-15.403-4.159-.985-11.031h-13.882l1.937 21.717 28.331 7.863.063-.018v-14.39z"></path><path fill="#fff" d="M81.127 64.675l-1.666 18.522-15.426 4.164v14.39l28.354-7.858.208-2.337 2.406-26.881h-13.876z"></path><path fill="#EBEBEB" d="M64.048 23.435v13.831000000000001h-33.407999999999994l-.277-3.108-.63-7.012-.331-3.711h34.646zM64.001 51.431v13.831000000000001h-15.209l-.277-3.108-.631-7.012-.33-3.711h16.447z"></path>
+                </svg>
+              </div>
               <div class="actions">
                 <a href="#" class="btn btn-default">Website</a>
                 <a href="#" class="btn btn-default">Code</a>
@@ -207,7 +217,7 @@
                   <i class="browser-icons"></i>
                 </div>
                 <div class="browser-viewport">
-                  <img class="img-responsive" src="images/tic_tac_toe_screenshot.jpg" alt="">
+                  <img class="img-responsive" src="images/tic_tac_toe_screenshot.png" alt="">
                 </div>
               </div>
             </div>
