Fix the issue (getting 404) with font awesome and devicon icons.

--- a/app/index.html
+++ b/app/index.html
@@ -4,17 +4,16 @@
     <meta charset="utf-8">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>portfolio</title>
+    <title>Marek Dano - portfolio</title>
 
     <!-- <link rel="apple-touch-icon" href="apple-touch-icon.png"> -->
     <!-- Place favicon.ico in the root directory -->
     <!-- <link rel="shortcut icon" type="image/png" href="favicon.ico"/> -->
     <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css">
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
     
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
-    <link rel="stylesheet" href="/bower_components/font-awesome/css/font-awesome.css" />
-    <link rel="stylesheet" type="text/css" href="/bower_components/devicon/devicon.css">
     <link rel="stylesheet" type="text/css" href="/bower_components/hover/css/hover-min.css">
     <!-- endbower -->
     <!-- endbuild -->
