Re-size the carosabikes screenshot for better web performance. Change carosabikes url.

--- a/app/index.html
+++ b/app/index.html
@@ -97,7 +97,7 @@
                 <i class="devicon devicon-heroku-original-wordmark colored"></i>
               </div>
               <div class="actions">
-                <a href="http://carosabikes.marekdano.com" target="_blank" class="btn btn-default">Website</a>
+                <a href="http://carosabikes.herokuapp.com" target="_blank" class="btn btn-default">Website</a>
                 <a href="http://github.com/marekdano/firstApp" target="_blank" class="btn btn-default">Code</a>
               </div>
             </div>
