Add link to get google fonts instead of importing them in scss file. Update main style file. Remove unused code in page-index.

--- a/src/page-index/page-index.html
+++ b/src/page-index/page-index.html
@@ -1,29 +1,23 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html>
   <head>
     <meta charset="utf-8">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Marek Dano - portfolio</title>
 
-    <!-- <link rel="apple-touch-icon" href="apple-touch-icon.png"> -->
-    <!-- Place favicon.ico in the root directory -->
     <!-- <link rel="shortcut icon" type="image/png" href="favicon.ico"/> -->
-    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css">
-    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+    <link type="text/css" rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans|PT+Sans" rel="stylesheet">
 
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
-    <link rel="stylesheet" type="text/css" href="/bower_components/hover/css/hover-min.css">
+    <!-- <link rel="stylesheet" type="text/css" href="/bower_components/hover/css/hover-min.css"> -->
     <!-- endbower -->
     <!-- endbuild -->
 
-    <!-- build:css styles/main.css -->
-    <link rel="stylesheet" href="styles/main.css">
-    <!-- endbuild -->
-
     <!-- build:js scripts/vendor/modernizr.js -->
-    <script src="/bower_components/modernizr/modernizr.js"></script>
+    <!-- <script src="/bower_components/modernizr/modernizr.js"></script> -->
     <!-- endbuild -->
   </head>
   <body>
@@ -31,33 +25,32 @@
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <div id="wrapper">
+    <main id="wrapper">
       <section id="intro">
         <div class="picture">
-          <img class="img-circle img-profile" src="images/profile-image.jpg" alt="profile image">
+          <img class="img-circle img-profile" src="assets/images/profile-image.jpg" alt="profile image">
         </div>
         <h3>Marek Dano</h3>
         <div class="intro-content">
-          <h4 class="title">Web developer / Tester </h4>
+          <h4 class="title">Software developer</h4>
           <span id="typed-sentences"></span>
         </div>
 
         <ul class="social">
-          <li><a href="https://www.github.com/marekdano" target="_blank"><i class="fa fa-github"></i></a></li>
-          <li><a href="https://www.twitter.com/marekdano" target="_blank"><i class="fa fa-twitter"></i></a></li>
-          <li><a href="https://www.linkedin.com/in/marekdano" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-          <li><a href="http://codepen.io/marekdano" target="_blank"><i class="fa fa-codepen"></i></a></li>
+          <li><a href="https://www.github.com/marekdano" target="_blank"><i class="fab fa-github"></i></a></li>
+          <li><a href="https://www.twitter.com/marekdano" target="_blank"><i class="fab fa-twitter"></i></a></li>
+          <li><a href="https://www.linkedin.com/in/marekdano" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+          <li><a href="http://codepen.io/marekdano" target="_blank"><i class="fab fa-codepen"></i></a></li>
         </ul>
-      </section><!-- /#intro -->
+      </section>
 
       <section id="arrow-link" class="hvr-wobble-vertical">
         <h5>Portfolio</h5>
-        <a href="#portfolio"><i class="fa fa-angle-down"></i></a>
+        <a href="#portfolio"><i class="fas fa-angle-down"></i></a>
       </section>
 
       <section id="portfolio">
         <div class="inner">
-
           <article class="feature right">
            <div class="row">
             <div class="image-wrapper col-md-6 pull-right-img">
@@ -66,7 +59,7 @@
                   <i class="browser-icons"></i>
                 </div>
                 <div class="browser-viewport">
-                  <img class="img-responsive" src="images/carosabikes_intro_screenshot.png" alt="">
+                  <!-- <img class="img-responsive" src="assets/images/carosabikes_intro_screenshot.png" alt=""> -->
                 </div>
               </div>
             </div>
@@ -112,7 +105,7 @@
                   <i class="browser-icons"></i>
                 </div>
                 <div class="browser-viewport">
-                  <img class="img-responsive" src="images/railsblog_screenshot.png" alt="">
+                  <!-- <img class="img-responsive" src="assets/images/railsblog_screenshot.png" alt=""> -->
                 </div>
               </div>
             </div>
@@ -146,7 +139,7 @@
                   <i class="browser-icons"></i>
                 </div>
                 <div class="browser-viewport">
-                  <img class="img-responsive" src="images/fullbasket_screenshot.png" alt="">
+                  <!-- <img class="img-responsive" src="assets/images/fullbasket_screenshot.png" alt=""> -->
                 </div>
               </div>
             </div>
@@ -180,7 +173,7 @@
                   <i class="browser-icons"></i>
                 </div>
                 <div class="browser-viewport">
-                  <img class="img-responsive" src="images/cicero_innovate_screenshot.png" alt="">
+                  <!-- <img class="img-responsive" src="assets/images/cicero_innovate_screenshot.png" alt=""> -->
                 </div>
               </div>
             </div>
@@ -214,7 +207,7 @@
                   <i class="browser-icons"></i>
                 </div>
                 <div class="browser-viewport">
-                  <img class="img-responsive" src="images/tic_tac_toe_screenshot.png" alt="">
+                  <!-- <img class="img-responsive" src="assets/images/tic_tac_toe_screenshot.png" alt=""> -->
                 </div>
               </div>
             </div>
@@ -242,9 +235,9 @@
            </div>
           </article>
 
-        </div><!-- /.inner -->
-      </section><!-- /#portfolio -->
-    </div><!-- /#wrapper -->
+        </div>
+      </section>
+    </main>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
@@ -258,13 +251,8 @@
 
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
-    <script src="/bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="/bower_components/typed.js/dist/typed.min.js"></script>
+    <!-- <script src="/bower_components/typed.js/dist/typed.min.js"></script> -->
     <!-- endbower -->
-    <!-- endbuild -->
-
-    <!-- build:js scripts/main.js -->
-    <script src="scripts/main.js"></script>
     <!-- endbuild -->
   </body>
 </html>
