Move page-index style to new page-index scss file. Add style for profile avatar and titles in the page-index.

--- a/src/page-index/page-index.html
+++ b/src/page-index/page-index.html
@@ -45,7 +45,7 @@
       </section>
 
       <section id="arrow-link" class="hvr-wobble-vertical">
-        <h5>Portfolio</h5>
+        <h6 class="title__link">Portfolio</h6>
         <a href="#portfolio"><i class="fas fa-angle-down"></i></a>
       </section>
 
