--- a/src/page-index/page-index.html
+++ b/src/page-index/page-index.html
@@ -10,12 +10,6 @@
     <link type="text/css" rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
     <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans|PT+Sans" rel="stylesheet">
 
-    <!-- build:css styles/vendor.css -->
-    <!-- bower:css -->
-    <!-- <link rel="stylesheet" type="text/css" href="/bower_components/hover/css/hover-min.css"> -->
-    <!-- endbower -->
-    <!-- endbuild -->
-
     <!-- build:js scripts/vendor/modernizr.js -->
     <!-- <script src="/bower_components/modernizr/modernizr.js"></script> -->
     <!-- endbuild -->
@@ -53,7 +47,7 @@
         <div class="inner">
           <article class="feature right">
            <div class="row">
-            <div class="image-wrapper col-md-6 pull-right-img">
+            <div class="image-wrapper">
               <div class="browser">
                 <div class="browser-toolbar">
                   <i class="browser-icons"></i>
@@ -90,8 +84,8 @@
                 <i class="devicon devicon-heroku-original-wordmark colored"></i>
               </div>
               <div class="actions">
-                <a href="http://carosabikes.herokuapp.com" target="_blank" class="btn btn-default">Website</a>
-                <a href="http://github.com/marekdano/firstApp" target="_blank" class="btn btn-default">Code</a>
+                <a href="http://carosabikes.herokuapp.com" target="_blank" class="btn btn__default">Website</a>
+                <a href="http://github.com/marekdano/firstApp" target="_blank" class="btn btn__default">Code</a>
               </div>
             </div>
            </div>
@@ -124,8 +118,8 @@
                 <i class="devicon devicon-heroku-original-wordmark colored"></i>
               </div>
               <div class="actions">
-                <a href="http://railsblog.marekdano.com" class="btn btn-default" target="_blank">Website</a>
-                <a href="http://github.com/marekdano/rails-blog" class="btn btn-default" target="_blank">Code</a>
+                <a href="http://railsblog.marekdano.com" class="btn btn__default" target="_blank">Website</a>
+                <a href="http://github.com/marekdano/rails-blog" class="btn btn__default" target="_blank">Code</a>
               </div>
             </div>
            </div>
@@ -158,8 +152,8 @@
                 <i class="devicon devicon-heroku-original-wordmark colored"></i>
               </div>
               <div class="actions">
-                <a href="http://fullbasket.marekdano.com" class="btn btn-default" target="_blank">Website</a>
-                <a href="http://github.com/marekdano/full-basket" class="btn btn-default" target="_blank">Code</a>
+                <a href="http://fullbasket.marekdano.com" class="btn btn__default" target="_blank">Website</a>
+                <a href="http://github.com/marekdano/full-basket" class="btn btn__default" target="_blank">Code</a>
               </div>
             </div>
            </div>
@@ -178,8 +172,8 @@
               </div>
             </div>
             <div class="portfolio-content col-md-6">
-              <h2>Cicero Innovate</h2>
-              <p>CiceroInnovate is a website for a consulting company to showcase their company profile.</p>
+              <h2>Company landing page</h2>
+              <p>Cicero Networks is a website for a consulting company to showcase their company profile.</p>
 
               <p>The website is a basic static web page written in:</p>
 
@@ -193,7 +187,7 @@
                 </svg>
               </div>
               <div class="actions">
-                <a href="http://www.ciceroinnovate.com" class="btn btn-default" target="_blank">Website</a>
+                <a href="http://www.ciceroinnovate.com" class="btn btn__default" target="_blank">Website</a>
               </div>
             </div>
            </div>
@@ -228,8 +222,8 @@
                 </svg>
               </div>
               <div class="actions">
-                <a href="http://tictactoe.marekdano.com" class="btn btn-default" target="_blank">Website</a>
-                <a href="http://github.com/marekdano/tictactoe" class="btn btn-default" target="_blank">Code</a>
+                <a href="http://tictactoe.marekdano.com" class="btn btn__default" target="_blank">Website</a>
+                <a href="http://github.com/marekdano/tictactoe" class="btn btn__default" target="_blank">Code</a>
               </div>
             </div>
            </div>
@@ -239,7 +233,6 @@
       </section>
     </main>
 
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -248,11 +241,5 @@
       ga('create', 'UA-34192408-1', 'auto');
       ga('send', 'pageview');
     </script>
-
-    <!-- build:js scripts/vendor.js -->
-    <!-- bower:js -->
-    <!-- <script src="/bower_components/typed.js/dist/typed.min.js"></script> -->
-    <!-- endbower -->
-    <!-- endbuild -->
   </body>
 </html>
