Replace bootstrap image style with the custom one.

--- a/src/page-index/page-index.html
+++ b/src/page-index/page-index.html
@@ -9,10 +9,6 @@
     <!-- <link rel="shortcut icon" type="image/png" href="favicon.ico"/> -->
     <link type="text/css" rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
     <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans|PT+Sans" rel="stylesheet">
-
-    <!-- build:js scripts/vendor/modernizr.js -->
-    <!-- <script src="/bower_components/modernizr/modernizr.js"></script> -->
-    <!-- endbuild -->
   </head>
   <body>
     <!--[if lt IE 10]>
@@ -46,18 +42,17 @@
       <section id="portfolio">
         <div class="inner">
           <article class="feature right">
-           <div class="row">
-            <div class="image-wrapper">
+            <div class="image-wrapper float-right-img">
               <div class="browser">
                 <div class="browser-toolbar">
                   <i class="browser-icons"></i>
                 </div>
                 <div class="browser-viewport">
-                  <!-- <img class="img-responsive" src="assets/images/carosabikes_intro_screenshot.png" alt=""> -->
+                  <img class="img-responsive" src="assets/images/carosabikes_intro_screenshot.png" alt="">
                 </div>
               </div>
             </div>
-            <div class="portfolio-content col-md-6">
+            <div class="portfolio-content">
               <h2>Carosabikes</h2>
               <p>Carosabikes is a fully functional online shop. It has been created as a main project during my learning of Ruby and Rails framework on <a href="http://careerfoundry.com" target="_blank">CareerFoundry</a>.</p>
 
@@ -88,22 +83,20 @@
                 <a href="http://github.com/marekdano/firstApp" target="_blank" class="btn btn__default">Code</a>
               </div>
             </div>
-           </div>
           </article>
 
           <article class="feature left">
-           <div class="row">
-            <div class="image-wrapper col-md-6">
+            <div class="image-wrapper float-left-img">
               <div class="browser">
                 <div class="browser-toolbar">
                   <i class="browser-icons"></i>
                 </div>
                 <div class="browser-viewport">
-                  <!-- <img class="img-responsive" src="assets/images/railsblog_screenshot.png" alt=""> -->
+                  <img class="img-responsive" src="assets/images/railsblog_screenshot.png" alt="">
                 </div>
               </div>
             </div>
-            <div class="portfolio-content col-md-6">
+            <div class="portfolio-content">
               <h2>RailsBlog</h2>
               <p>Railsblog is a blogging application written in Ruby on Rails where an article can be created, edited or deleted. All articles are dynamically displayed for reading.</p>
 
@@ -122,22 +115,20 @@
                 <a href="http://github.com/marekdano/rails-blog" class="btn btn__default" target="_blank">Code</a>
               </div>
             </div>
-           </div>
           </article>
 
           <article class="feature right">
-           <div class="row">
-            <div class="image-wrapper col-md-6 pull-right-img">
+            <div class="image-wrapper float-right-img">
               <div class="browser">
                 <div class="browser-toolbar">
                   <i class="browser-icons"></i>
                 </div>
                 <div class="browser-viewport">
-                  <!-- <img class="img-responsive" src="assets/images/fullbasket_screenshot.png" alt=""> -->
+                  <img class="img-responsive" src="assets/images/fullbasket_screenshot.png" alt="">
                 </div>
               </div>
             </div>
-            <div class="portfolio-content col-md-6">
+            <div class="portfolio-content">
               <h2>Full basket</h2>
               <p>Full basket is a application for adding / removing any item to / from a virtual basket. The application can be used as a core implementation for any complex applications (e.g. online cart, shopping list...).</p>
 
@@ -156,22 +147,20 @@
                 <a href="http://github.com/marekdano/full-basket" class="btn btn__default" target="_blank">Code</a>
               </div>
             </div>
-           </div>
           </article>
 
           <article class="feature left">
-           <div class="row">
-            <div class="image-wrapper col-md-6">
+            <div class="image-wrapper float-left-img">
               <div class="browser">
                 <div class="browser-toolbar">
                   <i class="browser-icons"></i>
                 </div>
                 <div class="browser-viewport">
-                  <!-- <img class="img-responsive" src="assets/images/cicero_innovate_screenshot.png" alt=""> -->
+                  <img class="img-responsive" src="assets/images/cicero_networks_screenshot.png" alt="">
                 </div>
               </div>
             </div>
-            <div class="portfolio-content col-md-6">
+            <div class="portfolio-content">
               <h2>Company landing page</h2>
               <p>Cicero Networks is a website for a consulting company to showcase their company profile.</p>
 
@@ -190,22 +179,20 @@
                 <a href="http://www.ciceroinnovate.com" class="btn btn__default" target="_blank">Website</a>
               </div>
             </div>
-           </div>
           </article>
 
           <article class="feature right">
-           <div class="row">
-            <div class="image-wrapper col-md-6 pull-right-img">
+            <div class="image-wrapper float-right-img">
               <div class="browser">
                 <div class="browser-toolbar">
                   <i class="browser-icons"></i>
                 </div>
                 <div class="browser-viewport">
-                  <!-- <img class="img-responsive" src="assets/images/tic_tac_toe_screenshot.png" alt=""> -->
+                  <img class="img-responsive" src="assets/images/tic_tac_toe_screenshot.png" alt="">
                 </div>
               </div>
             </div>
-            <div class="portfolio-content col-md-6">
+            <div class="portfolio-content">
               <h2>Tic Tac Toe</h2>
               <p>Tictactoe is a browser game which can be played between a computer and a player or between two players.
 
@@ -226,7 +213,6 @@
                 <a href="http://github.com/marekdano/tictactoe" class="btn btn__default" target="_blank">Code</a>
               </div>
             </div>
-           </div>
           </article>
 
         </div>
