Style sections to display images in the different order. On desktop in row and phone in columns.

--- a/src/page-index/page-index.html
+++ b/src/page-index/page-index.html
@@ -42,7 +42,7 @@
       <section id="portfolio">
         <div class="inner">
           <article class="feature right">
-            <div class="image-wrapper float-right-img">
+            <div class="image-wrapper image-wrapper__right ">
               <div class="browser">
                 <div class="browser-toolbar">
                   <i class="browser-icons"></i>
@@ -86,7 +86,7 @@
           </article>
 
           <article class="feature left">
-            <div class="image-wrapper float-left-img">
+            <div class="image-wrapper">
               <div class="browser">
                 <div class="browser-toolbar">
                   <i class="browser-icons"></i>
@@ -118,7 +118,7 @@
           </article>
 
           <article class="feature right">
-            <div class="image-wrapper float-right-img">
+            <div class="image-wrapper image-wrapper__right ">
               <div class="browser">
                 <div class="browser-toolbar">
                   <i class="browser-icons"></i>
@@ -150,7 +150,7 @@
           </article>
 
           <article class="feature left">
-            <div class="image-wrapper float-left-img">
+            <div class="image-wrapper">
               <div class="browser">
                 <div class="browser-toolbar">
                   <i class="browser-icons"></i>
@@ -182,7 +182,7 @@
           </article>
 
           <article class="feature right">
-            <div class="image-wrapper float-right-img">
+            <div class="image-wrapper image-wrapper__right ">
               <div class="browser">
                 <div class="browser-toolbar">
                   <i class="browser-icons"></i>
