Display images as a block.

--- a/src/page-index/page-index.html
+++ b/src/page-index/page-index.html
@@ -176,7 +176,7 @@
                 </svg>
               </div>
               <div class="actions">
-                <a href="http://www.ciceroinnovate.com" class="btn btn__default" target="_blank">Website</a>
+                <a href="http://www.ciceronetworks.com" class="btn btn__default" target="_blank">Website</a>
               </div>
             </div>
           </article>
